--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "eslint": "^8.17.0",
+    "prettier": "^2.8.3",
     "eslint-plugin-vue": "^9.1.0",
     "file-loader": "^6.2.0",
     "node-sass": "^7.0.1",
