--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.1",
-    "nodemon": "^2.0.16",
-    "prettier": "^2.6.2"
+    "nodemon": "^2.0.16"
   }
 }
