--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/jakowenko/double-take#readme",
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "ace-builds": "^1.5.3",
+    "ant-design-vue": "^4.0.7",
     "axios": "^0.27.2",
     "copy-to-clipboard": "^3.3.1",
     "luxon": "^2.4.0",
@@ -27,6 +29,7 @@
     "primeicons": "^5.0.0",
     "primevue": "^3.13.0",
     "prismjs": "^1.28.0",
+    "probe-image-size": "^7.2.3",
     "pulltorefreshjs": "^0.1.22",
     "socket.io-client": "^4.5.1",
     "v-lazy-image": "^2.1.1",
@@ -44,10 +47,10 @@
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "eslint": "^8.17.0",
-    "prettier": "^2.8.3",
     "eslint-plugin-vue": "^9.1.0",
     "file-loader": "^6.2.0",
     "node-sass": "^7.0.1",
+    "prettier": "^2.8.3",
     "sass-loader": "^13.0.0"
   },
   "eslintConfig": {
