--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,11 +23,12 @@
     "ant-design-vue": "^4.0.7",
     "axios": "^0.27.2",
     "copy-to-clipboard": "^3.3.1",
+    "hzqing-vue-timeline": "^1.0.3",
     "luxon": "^2.4.0",
     "mitt": "^3.0.0",
     "primeflex": "^2.0.0",
     "primeicons": "^5.0.0",
-    "primevue": "^3.13.0",
+    "primevue": "^3.43.0",
     "prismjs": "^1.28.0",
     "probe-image-size": "^7.2.3",
     "pulltorefreshjs": "^0.1.22",
@@ -35,7 +36,10 @@
     "v-lazy-image": "^2.1.1",
     "v-pagination-3": "^0.1.7",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.15",
+    "vue-avatar": "^2.3.3",
+    "vue-horizontal-timeline": "^0.12.0",
+    "vue-next-timeline": "^0.2.1",
+    "vue-router": "^4.2.5",
     "vue3-ace-editor": "^2.2.2"
   },
   "devDependencies": {
