--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "ace-builds": "^1.5.3",
     "axios": "^0.27.2",
     "copy-to-clipboard": "^3.3.1",
+    "js-yaml": "^4.1.0",
     "luxon": "^2.4.0",
     "mitt": "^3.0.0",
     "primeflex": "^2.0.0",
