--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,14 +21,18 @@
     "ace-builds": "^1.5.3",
     "axios": "^0.27.2",
     "copy-to-clipboard": "^3.3.1",
+    "exceljs": "^4.4.0",
     "js-yaml": "^4.1.0",
     "luxon": "^2.4.0",
     "mitt": "^3.0.0",
+    "os": "^0.1.2",
+    "pinia": "^2.1.7",
     "primeflex": "^2.0.0",
     "primeicons": "^5.0.0",
     "primevue": "^3.43.0",
     "prismjs": "^1.28.0",
     "probe-image-size": "^7.2.3",
+    "public-ip": "^6.0.1",
     "pulltorefreshjs": "^0.1.22",
     "socket.io-client": "^4.5.1",
     "v-lazy-image": "^2.1.1",
