--- a/api/package.json
+++ b/api/package.json
@@ -19,16 +19,20 @@
   "dependencies": {
     "@aws-sdk/client-rekognition": "^3.105.0",
     "@mhoc/axios-digest-auth": "^0.8.0",
+    "@tensorflow/tfjs-node": "^4.15.0",
     "archiver": "^5.3.1",
     "axios": "^0.27.2",
     "better-sqlite3": "^7.5.3",
-    "canvas": "^2.9.1",
+    "body-parser": "^1.20.2",
+    "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "execution-time": "^1.4.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "face-api.js": "^0.22.2",
     "form-data": "^4.0.0",
     "get-orientation": "^1.1.2",
+    "ip": "^1.1.8",
     "joi": "^17.6.0",
     "js-yaml": "^4.1.0",
     "jsdom": "^19.0.0",
@@ -39,8 +43,11 @@
     "mqtt": "^4.3.7",
     "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.0",
+    "os": "^0.1.2",
     "probe-image-size": "^7.2.3",
+    "public-ip": "^6.0.1",
     "read-last-lines": "^1.8.0",
+    "request": "^2.88.2",
     "sharp": "^0.30.4",
     "socket.io": "^4.5.1",
     "traverse": "^0.6.6",
