--- a/package.json
+++ b/package.json
@@ -33,7 +33,14 @@
     "prettier": "^2.6.2"
   },
   "dependencies": {
+    "@tensorflow/tfjs-node": "^4.15.0",
+    "canvas": "^2.11.2",
     "cross-env": "^7.0.3",
+    "exceljs": "^4.4.0",
+    "face-api.js": "^0.22.2",
+    "pinia": "^2.1.7",
+    "public-ip": "^6.0.1",
+    "request": "^2.88.2",
     "vue-avatar": "^2.3.3",
     "vue-horizontal-timeline": "^0.12.0"
   }
