--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,17 +21,25 @@
     "ace-builds": "^1.5.3",
     "axios": "^0.27.2",
     "copy-to-clipboard": "^3.3.1",
+    "exceljs": "^4.4.0",
+    "js-yaml": "^4.1.0",
     "luxon": "^2.4.0",
     "mitt": "^3.0.0",
+    "os": "^0.1.2",
+    "pinia": "^2.1.7",
     "primeflex": "^2.0.0",
     "primeicons": "^5.0.0",
-    "primevue": "^3.13.0",
+    "primevue": "^3.43.0",
     "prismjs": "^1.28.0",
+    "probe-image-size": "^7.2.3",
+    "public-ip": "^6.0.1",
     "pulltorefreshjs": "^0.1.22",
     "socket.io-client": "^4.5.1",
     "v-lazy-image": "^2.1.1",
     "v-pagination-3": "^0.1.7",
     "vue": "^3.2.37",
+    "vue-avatar": "^2.3.3",
+    "vue-horizontal-timeline": "^0.12.0",
     "vue-router": "^4.0.15",
     "vue3-ace-editor": "^2.2.2"
   },
@@ -44,10 +52,10 @@
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "eslint": "^8.17.0",
-    "prettier": "^2.8.3",
     "eslint-plugin-vue": "^9.1.0",
     "file-loader": "^6.2.0",
     "node-sass": "^7.0.1",
+    "prettier": "^2.8.3",
     "sass-loader": "^13.0.0"
   },
   "eslintConfig": {
