--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Double Take",
-  "short_name": "Double Take",
+  "name": "WID GUARDIAN",
+  "short_name": "WID GUARDIAN",
   "start_url": "/",
   "display": "standalone"
 }
