--- a/.develop/docker-compose.yml
+++ b/.develop/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - /double-take/api/node_modules
 
   emqx:
-    container_name: emqx
+    container_name: emqx-doubletake
     image: emqx/emqx:latest
     restart: always
     environment:
@@ -56,10 +56,11 @@ services:
   #     - /dev/dri/renderD128 # for intel hwaccel, needs to be updated for your hardware
   #   volumes:
   #     - /etc/localtime:/etc/localtime:ro
+  #     - ../frigate/config:/config
   #     - type: tmpfs # Optional: 1GB of memory, reduces SSD/SD Card wear
   #       target: /tmp/cache
   #       tmpfs:
-  #         size: 1000000000
+  #         size: 10000000000
   #   ports:
   #     - '5000:5000'
   #     - '8554:8554' # RTSP feeds
